<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeActivity"
    style="@style/MainStyle">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7ea4b3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/RecipeImage"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:contentDescription="@string/applepie"
        android:src="@drawable/applepie"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarRecipe" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="380dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/MainStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2">

            <EditText
                android:id="@+id/RecipeName"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/apple_pie"
                android:text="@string/apple_pie" />

            <TextView
                android:textSize="30sp"
                android:textColor="#1863CA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/ingridients" />


            <LinearLayout
                android:id="@+id/RecipeIngridientsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/RecipeDirections"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RecipeIngridients">

            </LinearLayout>

            <Button
                android:id="@+id/addIngridient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="20dp"
                android:text="@string/add_ingridient" />

            <TextView
                android:textSize="30sp"
                android:textColor="#1863CA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/directions" />

            <EditText
                android:id="@+id/RecipeDirections"
                style="@style/TextStyle"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/bake_it_real_good"
                android:inputType="textMultiLine"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="13dp"
                tools:layout_editor_absoluteY="606dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>